# structure copied from https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reinvt_diffusion2d"
version = "0.0.7"
authors = [
    {name = "Vincent Rein", email = "st188087@stud.uni-stuttgart.de"},
]
description = "Solves the two-dimensional diffusion equation on a square plate using an explicit finite-difference scheme."
readme = "README.md"
requires-python = ">=3.6"
keywords = ["diffusion", "pde", "finite-difference", "simulation"]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.1"
]

[tool.setuptools]
packages = ["reinvt_diffusion2d"]
